test/integration/page-config/pages/valid/config-import.js
// eslint-disable-next-line no-unused-vars
import { config } from '../../config'

export const getServerSideProps = () => {
  return {
    props: {},
  }
}

const ConfigImport = () => <p>hello world</p>

export default ConfigImport
