test/integration/page-config/pages/invalid/no-init.js
const NoInit = () => <p>hello world</p>
// export let config

export default NoInit
